# moon

./: .gitignore  .gitmodules  .justfile  404.html  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  TODO.md  _typos.toml  changes.md  clippy.toml  commands.html  index.html  json_schema.html  licenserc.toml  module.html  moonc-version  package.html  print.html  rustfmt.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-106eb8ee.js  searchindex-180e055a.js  searchindex-278a1e84.js  searchindex-2f42cf59.js  searchindex-35fc19cc.js  searchindex-579b810a.js  searchindex-5c5d3722.js  searchindex-5df9254a.js  searchindex-86c1d8af.js  searchindex-959243b2.js  searchindex-9e779735.js  searchindex-da375e6c.js  searchindex-df4fd3d8.js  searchindex-f0a07731.js  searchindex-f57c24f5.js  searchindex.js  searchindex.json  (+9 more)
crates/moon/: Cargo.toml
crates/moon-test-util/: Cargo.toml
crates/moon-test-util/src/: lib.rs  perf.rs  redact.rs  stack_trace.rs  test_dir.rs
crates/moon-test-util/src/cmdtest/: exec.rs  mod.rs  parse.rs  run.rs
crates/moon/src/: build_flags.rs  cli.rs  dependency_build_cache.rs  filter.rs  main.rs  panic.rs  perf.rs  signal_handler.rs  test_server.rs  user_diagnostics.rs
crates/moon/src/cli/: bench.rs  bin.rs  build.rs  build_matrix.rs  bundle.rs  check.rs  clean.rs  coverage.rs  cram.rs  deps.rs  doc.rs  explain.rs  explain_warning_index.rs  external.rs  fetch.rs  fmt.rs  generate_test_driver.rs  info.rs  install_binary.rs  mooncake_adapter.rs  moonx.rs  new.rs  pre_build.rs  process.rs  profile.rs  prove.rs  query.rs  registry_runner.rs  run.rs  runwasm.rs  shell_completion.rs  test.rs  tool.rs  update.rs  upgrade.rs  version.rs  whoami.rs  work.rs
crates/moon/src/rr_build/: dry_run.rs  mod.rs
crates/moon/src/run/: child.rs  mod.rs  runtest.rs  runtime.rs
crates/moon/src/tests/: mod.rs
crates/moon/src/watch/: filter_files.rs  mod.rs  prebuild_output.rs
crates/moon/tests/: add_updates_index.rs  add_upgrade_existing_dependency.rs  cmd_test.rs  dependency_build_cache.rs  dependency_source_cache.rs  dry_run_utils.rs  install_package.rs  mod.rs  util.rs
crates/moon/tests/build_graph/: mod.rs
crates/moon/tests/fixtures/: external_signal_handler.rs  fake_moon_cram.rs
crates/moon/tests/support/: build_graph.rs  dry_run_utils.rs  mod.rs  persistent.rs  process.rs  registry.rs  util.rs
crates/moon/tests/test_cases/: build_workflow.rs  install_atomic_rename.rs  mod.rs  moon_coverage.rs  moon_install_global.rs  moon_run_with_cli_args_graph.jsonl  moon_version.rs  package_management.rs  package_metadata.rs  package_testing.rs  plan.txt  run_command.rs  single_file.rs  source_directory.rs  test_expect_with_escape.rs  third_party_coverage_dry_run.jsonl  tool_commands.rs  wasm_memory.rs
crates/moonbuild/: Cargo.toml
crates/moonbuild-rupes-recta/: Cargo.toml  clippy.toml
crates/moonbuild-rupes-recta/src/: abs_build_graph.rs  all_pkgs.rs  build_lower.rs  build_plan.rs  cond_comp.rs  dependency_build_cache.rs  discover.rs  fmt.rs  intent.rs  lib.rs  mbtx.rs  metadata.rs  model.rs  pkg_name.rs  prebuild.rs  special_cases.rs  target_layout.rs  user_warning.rs  util.rs
crates/moonbuild-rupes-recta/src/build_action_plan/: action.rs  artifact.rs  mod.rs  product.rs  tests.rs  view.rs
crates/moonbuild-rupes-recta/src/build_lower/: artifact.rs  backend.rs  backend_pipeline.rs  compiler.rs  context.rs  lower_aux.rs  lower_build.rs  lowering.rs  mod.rs  moonc_command.rs  moonc_response.rs  products.rs  utils.rs
crates/moonbuild-rupes-recta/src/build_plan/: builders.rs  constructor.rs  mod.rs
crates/moonbuild-rupes-recta/src/compile/: mod.rs
crates/moonbuild-rupes-recta/src/discover/: mod.rs  model.rs  special_case.rs  speical_case.rs  synth.rs
crates/moonbuild-rupes-recta/src/pkg_parser/: mod.rs  syntax.rs
crates/moonbuild-rupes-recta/src/pkg_solve/: mod.rs  model.rs  solve.rs  verify.rs
crates/moonbuild-rupes-recta/src/resolve/: mod.rs
crates/moonbuild-rupes-recta/src/solve/: mod.rs  model.rs  solve.rs  (+1 more)
crates/moonbuild-rupes-recta/tests/: discover_moon_mod.rs
crates/moonbuild/src/: README.md  bench.rs  benchmark.rs  build.rs  build_script.rs  bundle.rs  doc_http.rs  dry_run.rs  entry.rs  expect.rs  fmt.rs  generate.rs  lib.rs  new.rs  pre_build.rs  runtest.rs  section_capture.rs  test_utils.rs  upgrade.rs  watch.rs
crates/moonbuild/template/: README.md  get_cli_args_js.mbt  get_cli_args_wasm.mbt  js_args.mbt  js_driver.js  js_test_driver_template.mbt  js_test_driver_template2.mbt  mod.schema.json  mod_json_schema.html  moon_new_template.toml  no_args_driver_template.mbt  pkg.schema.json  pkg_json_schema.html  test_driver_template.mbt  test_driver_template2.mbt  with_args_driver_template.mbt
crates/mooncake/: Cargo.toml
crates/mooncake/src/: dep_dir.rs  lib.rs  prepared_source.rs  registry.rs  resolver.rs  update.rs  zip_util.rs
crates/moonrun/: CONTEXT.md  Cargo.toml  README.md  build.rs
crates/moonrun/src/: async_api.rs  async_policy.rs  backtrace_api.rs  demangle_js_template.rs  fs_api_temp.rs  js.rs  main.rs  memory_sanitizer_api.rs  sys_api.rs  util.rs  v8_builder.rs  wasi_api.rs  wasmoo_extern.rs
crates/moonrun/tests/: test.rs
crates/moonutil/: Cargo.toml  build.rs
crates/moonutil/src/: binaries.rs  build_options.rs  build_script.rs  cache.rs  child_process.rs  cli.rs  cli_support.rs  command_output.rs  common.rs  compiler_flags.rs  cond_expr.rs  constants.rs  demangle.rs  dependency.rs  dirs.rs  doc_test.rs  error_code_docs.rs  features.rs  file_lock.rs  front_matter.rs  fuzzy_match.rs  git.rs  glob.rs  graph.rs  hash.rs  iters.rs  lib.rs  locks.rs  manifest.rs  module.rs  moon_dir.rs  moon_mod_patch.rs  moonc_response.rs  mooncake_bin.rs  mooncakes.rs  package.rs  path.rs  platform.rs  project.rs  registry.rs  (+14 more)
crates/moonutil/tests/: expect_moon_mod.rs  expect_moon_pkg.rs  project_facade.rs
xtask/: Cargo.toml  README.md  rr_expected_failures.txt  rr_wont_fix.txt
xtask/src/: bundle_template.rs  ci.rs  main.rs  sync_docs.rs  test_rr_parity.rs  test_rr_whitelist.rs
xtask/src/cmdtest/: exec.rs  moon.test  run.rs
(+1907 files in other folders)
