# moon: The build system and package manager for MoonBit.
# Copyright (C) 2024 International Digital Economy Academy
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# For inquiries, you can contact us via e-mail at jichuruanjian@idea.edu.cn.

[package]
name = "moon"
version = "0.1.0"
edition.workspace = true
exclude = [".github/*", ".vscode/*"]
readme = "README.md"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moonbuild.workspace = true
mooncake.workspace = true
moonutil.workspace = true
n2.workspace = true
semver.workspace = true
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
serde.workspace = true
serde_json_lenient.workspace = true
serde_json.workspace = true
dialoguer.workspace = true
dunce.workspace = true
ctrlc.workspace = true
home.workspace = true
which.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
walkdir.workspace = true
tokio.workspace = true
futures.workspace = true
clap_complete.workspace = true
indexmap.workspace = true
regex.workspace = true

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.6.0"
snapbox = "0.4.15"
expect-test.workspace = true
clap-markdown = "0.1.4"

[[bin]]
name = "moon"
bench = false
