# moon: The build system and package manager for MoonBit.
# Copyright (C) 2024 International Digital Economy Academy
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# For inquiries, you can contact us via e-mail at jichuruanjian@idea.edu.cn.

[package]
name = "moonbuild-rupes-recta"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
moonutil.workspace = true
mooncake.workspace = true

# Only for specific parts
moonbuild.workspace = true

n2.workspace = true

anyhow.workspace = true
arcstr.workspace = true
log.workspace = true
relative-path.workspace = true
slotmap.workspace = true
thiserror.workspace = true
walkdir.workspace = true
petgraph.workspace = true
indexmap.workspace = true
shlex.workspace = true
derive_builder.workspace = true
tracing.workspace = true
regex.workspace = true
dunce.workspace = true

aho-corasick = "1.1.3"
serde = { workspace = true, features = ["rc"] }