[package]
name = "moonbuild"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moonutil.workspace = true
mooncake.workspace = true
n2.workspace = true
clap.workspace = true
serde.workspace = true
serde_json_lenient.workspace = true
anyhow.workspace = true
colored.workspace = true
dunce.workspace = true
indexmap.workspace = true
notify.workspace = true
petgraph.workspace = true
walkdir.workspace = true
tempfile.workspace = true
ctrlc.workspace = true
dissimilar.workspace = true
line-index.workspace = true
home.workspace = true
tokio.workspace = true
self-replace.workspace = true
sysinfo.workspace = true
text-size.workspace = true
log.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-staticfile.workspace = true
http.workspace = true
dialoguer.workspace = true
futures.workspace = true
reqwest.workspace = true
console.workspace = true
semver.workspace = true
chrono.workspace = true
zip.workspace = true
thiserror.workspace = true

[dev-dependencies]
expect-test.workspace = true
