# moon: The build system and package manager for MoonBit.
# Copyright (C) 2024 International Digital Economy Academy
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# For inquiries, you can contact us via e-mail at jichuruanjian@idea.edu.cn.

[package]
name = "mooncake"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moonutil.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
anyhow.workspace = true
zip.workspace = true
colored.workspace = true
reqwest.workspace = true
bytes.workspace = true
semver.workspace = true
tokio.workspace = true
clap.workspace = true
sha2.workspace = true
log.workspace = true
walkdir.workspace = true
dialoguer.workspace = true
form_urlencoded = "1.2.1"
indexmap.workspace = true
petgraph.workspace = true
thiserror.workspace = true
dunce.workspace = true
git2 = "0.19.0"
url = "2.5.2"

[dev-dependencies]
expect-test.workspace = true
test-log.workspace = true
