# moon: The build system and package manager for MoonBit.
# Copyright (C) 2024 International Digital Economy Academy
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# For inquiries, you can contact us via e-mail at jichuruanjian@idea.edu.cn.

[package]
name = "moonrun"
version = "0.1.0"
edition.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json_lenient.workspace = true
slotmap.workspace = true
toml = { workspace = true, features = ["parse", "serde", "std"] }
moonutil.workspace = true
rand = "0.8.5"
v8 = "0.106.0"

[target."cfg(not(windows))".dependencies]
openssl.workspace = true
openssl-probe.workspace = true

[target."cfg(unix)".dependencies]
libc.workspace = true

[target."cfg(windows)".dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
chrono.workspace = true

[dev-dependencies]
escargot.workspace = true
moon-test-util = { path = "../moon-test-util" }
snapbox.workspace = true
tempfile.workspace = true

[[bin]]
name = "moonrun"
bench = false
