[package]
name = "moonutil"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home.workspace = true
anyhow.workspace = true
colored.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json_lenient.workspace = true
walkdir.workspace = true
clap.workspace = true
dialoguer.workspace = true
dunce.workspace = true
bincode.workspace = true
semver.workspace = true
fs4.workspace = true
petgraph.workspace = true
ariadne.workspace = true

[dev-dependencies]
expect-test.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
chrono.workspace = true
