# moon: The build system and package manager for MoonBit.
# Copyright (C) 2024 International Digital Economy Academy
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# For inquiries, you can contact us via e-mail at jichuruanjian@idea.edu.cn.

[package]
name = "moonutil"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home.workspace = true
anyhow.workspace = true
colored.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json_lenient.workspace = true
walkdir.workspace = true
clap.workspace = true
dialoguer.workspace = true
dunce.workspace = true
bincode.workspace = true
semver.workspace = true
fs4.workspace = true
petgraph.workspace = true
ariadne.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
schemars.workspace = true
line-index.workspace = true
nucleo-matcher.workspace = true
which.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
expect-test.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
chrono.workspace = true
